added cat image and few more elements

--- a/test.html
+++ b/test.html
@@ -1,3 +1,14 @@
-<h1>Hey. This is a header.</h1>
-<p>Hey. This is header. Pretty cool.</p>
-<a href="https://google.com" target="_blank" title="Let's go to google">Click me! I'm a lil link.</a>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Test page</title>
+</head>
+<body>
+	<h1>Hey. This is a header.</h1>
+	<p>Hey. This is <b>header</b>. Pretty cool.</p>
+	<a href="https://google.com" target="_blank" title="Let's go to google">Click me! I'm a lil link.</a>
+	<p>My name is:<br>
+	Kitty Cat</p>
+	<img src="https://www.cats.org.uk/media/5250/cat-3677527_1920-web.jpg?width=415&height=415">
+</body>
+</html>
