--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
 	<title>Test page</title>
 </head>
 <body>
-	<h1>Hey. I am a Big Header !!!.</h1>
+	<h1>Hey. I am a Big Header !!!</h1>
 	<p>Hey. I am a <b>paragraph element</b>. Pretty cool.</p>
 	<a href="https://google.com" target="_blank" title="Let's go to google">Click me! I'm a lil link.</a>
 	<p>My name is:<br>
